test: テスト仕様書の100項目に対応するJUnitテストスイートに全面書き換え
各テストを @DisplayName で仕様書のNo.1〜100に対応付け、コントローラ別に再構成。
共通の例外ハンドリング・認可テストは CommonExceptionHandlingTest に集約。